<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ddgatve-games</string>
    <string name="hello_world">Sveicināta, pasaule!</string>
    <string name="action_settings">Iestatījumi</string>
    <string name="action_game15">Spēle 15</string>
    <string name="title_activity_game15">Spēle 15</string>
    <string name="welcome_game15">Game15Activity</string>
    <string name="box00_alt">box00</string>
    <string name="box01_alt">box01</string>
    <string name="box02_alt">box02</string>
    <string name="box10_alt">box10</string>
    <string name="box12_alt">box12</string>
    <string name="box20_alt">box20</string>
    <string name="box21_alt">box21</string>
    <string name="box22_alt">box22</string>
    <string name="dialog_pick_frame">Spēles laukums?</string>
    <string name="f2_2">2x2</string>
    <string name="f3_3">3x3</string>

    <string-array name="field_types">
        <item>2×2</item>
        <item>3×3</item>
        <item>4×4</item>
    </string-array>

    <string name="title_activity_summary">Paziņojums</string>
    <string name="game_finished">Spēle veiksmīgi salikta</string>

</resources>